Upgrade to Gradle 8.3, clear deprecation warnings